--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>yomo.study</groupId>
-  <artifactId>daily-learn</artifactId>
+  <artifactId>yomo</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>daily-learn</name>
@@ -25,6 +25,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.15.Final</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
